--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -126,6 +126,8 @@
                 <li><a href="add_menu_item">Add Menu Item</a></li>
                 <li><a href="orders_table">Orders</a></li>
                 <li><a href="users_table">Users</a></li>
+                <li><a href="create_blog">Add Blog</a></li>
+                <li><a href="blog_list">Blog List</a></li>
             </ul>
         </div>
 
