--- a/templates/menu_items.html
+++ b/templates/menu_items.html
@@ -38,7 +38,7 @@
         }
         
         .category-image {
-            max-width: 200px;
+            max-width: 100%;
             margin-bottom: 10px;
         }
         
@@ -49,6 +49,12 @@
         
         .menu-item {
             margin-bottom: 10px;
+        }
+        
+        .dish-type-icon {
+            width: 20px;
+            height: 20px;
+            margin-right: 5px;
         }
     </style>
 </head>
@@ -85,12 +91,21 @@
                                 {% if item.category.id == category.id %}
                                     <div class="menu-item">
                                         {% if item.image %}
-                                            <img src="{{ item.image.url }}" alt="{{ item.title }}" class="item-image">
+                                            <img src="{{ item.image.url }}" alt="{{ item.dish_name }}" class="item-image">
                                         {% else %}
                                             <img src="{% static 'placeholder-image.jpg' %}" alt="Placeholder" class="item-image">
                                         {% endif %}
                                         <input type="checkbox" name="menu_items" value="{{ item.id }}">
-                                        <label>{{ item.title }} - ₹{{ item.price }}</label>
+                                        <label>
+                                            {% if item.dish_type == 'veg' %}
+                                                <img src="{% static 'images/veg-icon.png' %}" alt="Veg" class="dish-type-icon">
+                                            {% elif item.dish_type == 'non_veg' %}
+                                                <img src="{% static 'images/non-veg.jpeg' %}" alt="Non-Veg" class="dish-type-icon">
+                                            {% elif item.dish_type == 'green_leafy' %}
+                                                <img src="{% static 'images/veg-icon.png' %}" alt="Green Leafy" class="dish-type-icon">
+                                            {% endif %}
+                                            {{ item.dish_name }} - ₹{{ item.price }}
+                                        </label>
                                         <input type="number" name="quantities" min="1" value="1" class="quantity">
                                     </div>
                                 {% endif %}
