--- a/templates/order_successful.html
+++ b/templates/order_successful.html
@@ -69,7 +69,7 @@
             <tbody>
                 {% for item in order_items %}
                 <tr>
-                    <td>{{ item.menu_item_title }}</td>
+                    <td>{{ item.menu_item_dish_name}}</td>
                     <td>{{ item.quantity }}</td>
                     <td>₹{{ item.price }}</td>
                 </tr>
