--- a/templates/add_menu_item.html
+++ b/templates/add_menu_item.html
@@ -15,7 +15,7 @@
         }
 
         .container {
-            max-width: 600px;
+            max-width: 500px;
             margin: 0 auto;
             background-color: white;
             padding: 20px;
@@ -26,19 +26,29 @@
         h1 {
             text-align: center;
             margin-bottom: 20px;
-            color: #007bff;
+            color: orangered;
         }
 
-        form {
-            margin-bottom: 20px;
+        .form-group {
+            margin-bottom: 1.2rem;
         }
 
-        form p {
-            color: red;
+        .form-group label {
+            font-weight: bold;
+            color: orangered;
+        }
+
+        .form-control {
+            border-radius: 5px;
+        }
+
+        .form-row .col {
+            padding-right: 5px;
+            padding-left: 5px;
         }
 
         button, .btn-secondary {
-            background-color: #007bff;
+            background-color: orangered;
             color: white;
             border: none;
             padding: 10px 20px;
@@ -47,10 +57,11 @@
             transition: background-color 0.3s ease;
             display: inline-block;
             text-align: center;
+            width: 100%;
         }
 
         button:hover, .btn-secondary:hover {
-            background-color: #0056b3;
+            background-color: orangered;
         }
 
         .btn-secondary {
@@ -83,10 +94,35 @@
         </div>
         <form method="post" action="{% url 'add_menu_item' %}" enctype="multipart/form-data">
             {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Add Menu Item</button>
+            <div class="form-group">
+                {{ form.dish_name.label_tag }}
+                {{ form.dish_name }}
+            </div>
+            <div class="form-group">
+                {{ form.dish_type.label_tag }}
+                {{ form.dish_type }}
+            </div>
+            <div class="form-group">
+                {{ form.description.label_tag }}
+                {{ form.description }}
+            </div>
+            <div class="form-group form-row">
+                <div class="col">
+                    {{ form.price.label_tag }}
+                    {{ form.price }}
+                </div>
+                <div class="col">
+                    {{ form.category.label_tag }}
+                    {{ form.category }}
+                </div>
+            </div>
+            <div class="form-group">
+                {{ form.image.label_tag }}
+                {{ form.image }}
+            </div>
+            <button type="submit" class="btn btn-primary">Add Menu Item</button>
         </form>
-        <a href="{% url 'dashboard' %}" class="btn-secondary">Back to Dashboard Page</a>
+        <a href="{% url 'dashboard' %}" class="btn btn-secondary mt-3">Back to Dashboard Page</a>
     </div>
 </body>
 
