--- a/templates/orders_table.html
+++ b/templates/orders_table.html
@@ -73,7 +73,7 @@
                         <tbody>
                             {% for item in order.items.all %}
                             <tr>
-                                <td>{{ item.menu_item.title }}</td>
+                                <td>{{ item.menu_item.dish_name}}</td>
                                 <td>{{ item.quantity }}</td>
                                 <td>{{ item.menu_item.price }}</td>
                             </tr>
