Changed Header Item

--- a/templates/index.html
+++ b/templates/index.html
@@ -539,7 +539,7 @@ button:hover {
                 <li>Welcome {{user.first_name}}</li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#about-us">About Us</a>
+                    <a class="nav-link" href="#about-us">Madhuram</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#services">Services</a>
